# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  catalog.json  readme.md
backend/: .env.example  pyproject.toml  readme.md
backend/app/: ai.py  auth.py  config.py  database.py  logger.py  main.py
backend/app/routes/: auth.py  chat.py  document.py  health.py  nda.py  root.py
backend/app/services/: document_service.py  pdf_service.py  pdf_utils.py
backend/tests/: conftest.py  test_ai.py  test_auth_routes.py  test_auth_utils.py  test_chat_routes.py  test_database.py  test_document_routes.py  test_document_service.py  test_nda_routes.py  test_pdf_service.py  test_pdf_utils.py
docs/: test-coverage-report.md
frontend/: README.md  package.json  playwright.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/doc-preview/: page.tsx
frontend/src/components/: AppHeader.tsx  AuthGuard.tsx  DeleteDocumentDialog.tsx  DisclaimerBanner.tsx  DocumentSelector.tsx  DocumentsTable.tsx  NdaPageTabs.tsx  RecentDocuments.tsx
frontend/src/hooks/: useInactivityTimeout.ts
frontend/src/lib/: api.ts  catalog.ts  documentSchemas.ts
frontend/src/server/: root.ts
frontend/src/store/: useAuthStore.ts  useDocumentStore.ts  useNdaStore.ts
frontend/src/trpc/: react.tsx
frontend/src/types/: chat.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  document-selector.spec.ts  documents-table.spec.ts  global-teardown.ts  nda.spec.ts  save.spec.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
(+16 files in other folders)
